LFHCDESK-20: Add support for closed visit Changes to be committed: 	modified:   omod/src/main/webapp/resources/htmlforms/doctor-blood-trans.html Correct encounterDate attribute (showTime) Add code for closed visit
	modified:   omod/src/main/webapp/resources/htmlforms/nurse-blood-trans.html
Correct typo
Add code for closed visit

	modified:   omod/src/main/webapp/resources/htmlforms/treatment.html
Add code for closed visit

	modified:   omod/src/main/webapp/resources/scripts/changeEncounterDate.js
Correct issue with .hfe-hours fields

--- a/omod/src/main/webapp/resources/htmlforms/doctor-blood-trans.html
+++ b/omod/src/main/webapp/resources/htmlforms/doctor-blood-trans.html
@@ -7,6 +7,25 @@ formShowIf=""
 formDisplayStyle="Simple"
 >
 
+<ifMode mode="enter">
+	<uiInclude provider="lfhcforms" javascript="changeEncounterDate.js"/>
+	<lookup complexExpression="
+	#set($alertMessage = $fn.message('lfhcforms.pastencounter.alert'))
+	#set($successMessage = $fn.message('lfhcforms.pastencounter.success'))
+	&lt;script type=&quot;text/javascript&quot;>
+	var alertMessage = '${alertMessage}';
+	var successMessage = '${successMessage}';
+	$(document).ready(function(){
+	var visitEndDate = new Date('${visit.stopDatetime}');
+	if ( Object.prototype.toString.call(visitEndDate) === '[object Date]' ) {
+	if (!( isNaN( visitEndDate.getTime() ) )) {  
+	changeEncounterDate(visitEndDate);
+}
+}
+});
+&lt;/script>" />
+</ifMode>
+
 <ifMode mode="VIEW" include="false">
 	<uiInclude provider="lfhcforms" javascript="toggleContainers.js"/>
 
@@ -63,7 +82,7 @@ formDisplayStyle="Simple"
 			<uimessage code="coreapps.patientDashBoard.date" />
 		</label>
 		<span>
-			<encounterDate id="encounterDate" default="now" />
+			<encounterDate id="encounterDate" default="now" showTime="true" />
 		</span>
 	</p>
 </div>
