--- a/omod/src/main/webapp/resources/htmlforms/treatment.html
+++ b/omod/src/main/webapp/resources/htmlforms/treatment.html
@@ -81,8 +81,8 @@ formDisplayStyle="Simple"
 }
 });
 &lt;/script>" />
-</ifMode>
-
+</ifMode
+>
 
 <ifMode mode="VIEW" include="false">
 	<script type="text/javascript" id="properViewMode">
