--- a/omod/src/main/webapp/resources/htmlforms/nurse-blood-trans.html
+++ b/omod/src/main/webapp/resources/htmlforms/nurse-blood-trans.html
@@ -44,6 +44,25 @@ formDisplayStyle="Simple"
 </script>
 </ifMode>
 
+<ifMode mode="enter">
+	<uiInclude provider="lfhcforms" javascript="changeEncounterDate.js"/>
+	<lookup complexExpression="
+	#set($alertMessage = $fn.message('lfhcforms.pastencounter.alert'))
+	#set($successMessage = $fn.message('lfhcforms.pastencounter.success'))
+	&lt;script type=&quot;text/javascript&quot;>
+	var alertMessage = '${alertMessage}';
+	var successMessage = '${successMessage}';
+	$(document).ready(function(){
+	var visitEndDate = new Date('${visit.stopDatetime}');
+	if ( Object.prototype.toString.call(visitEndDate) === '[object Date]' ) {
+	if (!( isNaN( visitEndDate.getTime() ) )) {  
+	changeEncounterDate(visitEndDate);
+}
+}
+});
+&lt;/script>" />
+</ifMode>
+
 <ifMode mode="VIEW">
 	<script type="text/javascript" id="properViewMode">
 		// improve display of VIEW mode
@@ -52,15 +71,8 @@ formDisplayStyle="Simple"
 		});
 	</script>
 </ifMode>
-<style type="text/css">
 
-	/* TODO: To Remove;	*/
-	/* style for disabled input */
-	.input-disabled {
-		background-color:#EBEBE4;
-	}
-</style>
-<div class="hidden" id="who-when-where">
+<div class="hidden" id="who-when-where" >
 	<p id="who">
 		<label>
 			<uimessage code="coreapps.patientDashBoard.provider" />
@@ -82,14 +94,14 @@ formDisplayStyle="Simple"
 			<uimessage code="coreapps.patientDashBoard.date" />
 		</label>
 		<span>
-			<encounterDate id="encounterDate" default="now" />
+			<encounterDate id="encounterDate" default="now" showTime="true" />
 		</span>
 	</p>
 </div>
 
 <section id="blood-trans" sectionTag="section" headerStyle="title" headerCode="Blood Transfusion">
 	<fieldset>
-		<legend>Unit numder</legend>
+		<legend>Unit number</legend>
 		<h3>Blood unit number</h3>
 		<p>
 			<obs conceptId="LFHC:1139" size="15" />
