--- a/omod/src/main/webapp/resources/htmlforms/treatment.html
+++ b/omod/src/main/webapp/resources/htmlforms/treatment.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="3faa978f-8c89-4f8e-b29f-17fd11099ecf" formName="Treatment Plan/Order" formEncounterType="feacdb57-4388-4b39-8840-2ff063bfab34" formVersion="0.6.4"
+<htmlform formUuid="3faa978f-8c89-4f8e-b29f-17fd11099ecf" formName="Treatment Plan/Order" formEncounterType="feacdb57-4388-4b39-8840-2ff063bfab34" formVersion="0.6.5"
 formAddMetadata="yes"
 formUILocation="patientDashboard.visitActions"
 formOrder="7"
@@ -37,25 +37,22 @@ formDisplayStyle="Simple"
 
 			$(".bolus").each(function (index, currentBolus) {
 				$(currentBolus).trigger("change");
-				})
+			})
 			$(".bolus-amount").hide();
 			$(".bolus-default").show();
 			$(".bolus").change(function () {
 				// retrieve the numeric prefix in order to toggle the correct section
 				var prefix = parseFloat($(this).attr("id"));
 				if ($(this).is(':checked')) {
-					var bolusAmount = getValue(prefix+"-bolus-no-amount.value");
-					setValue(prefix+"-bolus-no-amount.value", "");
-					setValue(prefix+"-bolus-yes-amount.value", bolusAmount);
-					$("#"+prefix+"-bolus-no").hide();
+					//var bolusAmount = getValue(prefix+"-bolus-no-amount.value");
+					//setValue(prefix+"-bolus-no-amount.value", "");
+					//setValue(prefix+"-bolus-yes-amount.value", bolusAmount);
 					$("#"+prefix+"-bolus-yes").show();
 				}
 				else {
 					var noBolusAmount = getValue(prefix+"-bolus-yes-amount.value");
-					setValue(prefix+"-bolus-yes-amount.value", "");
-					setValue(prefix+"-bolus-no-amount.value", noBolusAmount);
-
-					$("#"+prefix+"-bolus-no").show();
+					//setValue(prefix+"-bolus-yes-amount.value", "");
+					//setValue(prefix+"-bolus-no-amount.value", noBolusAmount);
 					setValue(prefix+"-bolus-yes-amount.value", "");
 					$("#"+prefix+"-bolus-yes").hide();
 				}
@@ -298,16 +295,17 @@ formDisplayStyle="Simple"
 								<span class="questionLabel">Rate of IV fluid: </span>
 								<obs id="{n}-bolus-no-amount" conceptId="CIEL:162745" showUnits="true"/>
 							</p>
-							<p class="bolus-amount" id="{n}-bolus-yes">
-								<span class="questionLabel">Amount of IV fluid: </span>
-								<obs id="{n}-bolus-yes-amount" conceptId="LFHC:1273" showUnits="true"/>
-							</p>
 							<ifMode mode="view" include="false">
 								<p>
 									<input type="checkbox" class="bolus" id="{n}-bolus" name="bolus" value="true"/>
 									Bolus
 								</p>
 							</ifMode>
+							<p class="bolus-amount" id="{n}-bolus-yes">
+								<span class="questionLabel">Amount of IV fluid: </span>
+								<obs id="{n}-bolus-yes-amount" conceptId="LFHC:1273" showUnits="true"/>
+							</p>
+							
 						</obsgroup>
 					</div>
 					<p>
