LFHCDESK-20: Cancel deployment of issue Changes to be committed: 	modified:   omod/src/main/webapp/resources/htmlforms/doctor-blood-trans.html 	modified:   omod/src/main/webapp/resources/htmlforms/nurse-blood-trans.html change formAddMetaData="yes" to "no"
	modified:   omod/src/main/webapp/resources/htmlforms/treatment.html
comment the section Blood Transfusion Order

--- a/omod/src/main/webapp/resources/htmlforms/nurse-blood-trans.html
+++ b/omod/src/main/webapp/resources/htmlforms/nurse-blood-trans.html
@@ -1,5 +1,5 @@
 <htmlform formUuid="3a6776bd-43ed-4844-a815-155068e65aca" formName="Nurse Blood Transfusion" formEncounterType="10c20ebf-1af2-4ddf-bdaa-219fe8ff930b" formVersion="0.1"
-formAddMetadata="yes"
+formAddMetadata="no"
 formUILocation="patientDashboard.visitActions"
 formOrder="1"
 formIcon="icon-medkit"
