--- a/omod/src/main/webapp/resources/htmlforms/treatment.html
+++ b/omod/src/main/webapp/resources/htmlforms/treatment.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="3faa978f-8c89-4f8e-b29f-17fd11099ecf" formName="Treatment Plan/Order" formEncounterType="feacdb57-4388-4b39-8840-2ff063bfab34" formVersion="0.6.5"
+<htmlform formUuid="3faa978f-8c89-4f8e-b29f-17fd11099ecf" formName="Treatment Plan/Order" formEncounterType="feacdb57-4388-4b39-8840-2ff063bfab34" formVersion="0.6.6"
 formAddMetadata="yes"
 formUILocation="patientDashboard.visitActions"
 formOrder="7"
@@ -328,6 +328,10 @@ formDisplayStyle="Simple"
 			<render n="509"/>
 		</repeat>
 	</fieldset>
+
+	<!-- Commenting Blood transfusion section -->
+	<!-- To be deployed on next version -->
+	<!--
 	<fieldset field-separator=", ">
 		<legend>Blood Transfusion</legend>
 		<h3>Blood transfusion</h3>
@@ -347,6 +351,8 @@ formDisplayStyle="Simple"
 			</p>
 		</ifMode>
 	</fieldset>
+	-->
+
 	<fieldset field-separator=", ">
 
 		<legend>Diet</legend>
