LFHCDESK-20: formAddMetadata="yes" Changes to be committed: 	modified:   omod/src/main/webapp/resources/htmlforms/doctor-blood-trans.html 	modified:   omod/src/main/webapp/resources/htmlforms/nurse-blood-trans.html

--- a/omod/src/main/webapp/resources/htmlforms/doctor-blood-trans.html
+++ b/omod/src/main/webapp/resources/htmlforms/doctor-blood-trans.html
@@ -1,5 +1,5 @@
 <htmlform formUuid="2f86d386-5cd4-464a-bde6-9da718c30d0a" formName="Doctor Blood Transfusion" formEncounterType="89886052-4a6b-4b74-a71b-4b87094b02cb" formVersion="0.2"
-formAddMetadata="no"
+formAddMetadata="yes"
 formUILocation="patientDashboard.visitActions"
 formOrder="1"
 formIcon="icon-stethoscope"
