LFHCFORMS-88: Fallback to edit with HTML form for Ethnicity and Language ONLY 	modified:   omod/src/main/webapp/resources/htmlforms/registration.html

--- a/omod/src/main/webapp/resources/htmlforms/registration.html
+++ b/omod/src/main/webapp/resources/htmlforms/registration.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="49772477-83f7-4b08-a357-4102f42f2e14" formName="Edit Registration Info" formEncounterType="3e3424bd-6e9d-4c9c-b3a4-f3fee751fe7c" formVersion="0.5"
+<htmlform formUuid="49772477-83f7-4b08-a357-4102f42f2e14" formName="Edit Ethnicity" formEncounterType="3e3424bd-6e9d-4c9c-b3a4-f3fee751fe7c" formVersion="0.5"
 formAddMetadata="yes"
 formUILocation="patientDashboard.overallActions"
 formOrder="10"
@@ -88,8 +88,6 @@ formDisplayStyle="Standard"
 			<obs conceptId="LFHC:920"/>
 		</p>
 
-		<uiInclude provider="lfhcforms" fragment="registrationInfo"/>
-	
 	<hr style="border:1px; border-bottom:solid 1px #323060; margin-top: 25px; margin-bottom: 25px"/>
 	<button class="cancel"><uimessage code="coreapps.cancel" /></button>
 	<button class="confirm right"><uimessage code="coreapps.confirm" /><i class="icon-spinner icon-spin icon-2x" style="display: none; margin-left: 10px;"></i></button>
