Typo in Lab Test Order form (urinalysis) 	modified:   api/src/main/resources/messages.properties 	modified:   omod/src/main/webapp/resources/htmlforms/lab-test-order.html

--- a/omod/src/main/webapp/resources/htmlforms/lab-test-order.html
+++ b/omod/src/main/webapp/resources/htmlforms/lab-test-order.html
@@ -274,9 +274,9 @@ formDisplayStyle="Simple"
 			</repeat>
 		</fieldset>
 		<fieldset id="oh-fieldset">
-			<!-- Routine Urianalysis -->
-			<legend><uimessage code="lfhcforms.labtestorder.legend.routineurianalysis"/></legend>
-			<h4><uimessage code="lfhcforms.labtestorder.legend.routineurianalysis"/></h4>
+			<!-- Routine Urinalysis -->
+			<legend><uimessage code="lfhcforms.labtestorder.legend.routineurinalysis"/></legend>
+			<h4><uimessage code="lfhcforms.labtestorder.legend.routineurinalysis"/></h4>
 
 			<ifMode mode="enter">
 				<div>
